@startuml
'https://plantuml.com/sequence-diagram

entity "User <ユーザー>" as user {
  id（ユーザーID）: unsigned bigint <<PK>><<AI>>
  name（ユーザー名）: varchar(255)
  email（Eメール）: varchar(255) <<UQ>>
  email_verified_at（Eメール認証日）: timestamp
  password（パスワード）: varchar(255)
  remember_token（リメンバートークン）: varchar(100)
  --
  created_at（作成日）: timestamp
  updated_at（更新日）: timestamp
}


entity "PurchaseTarget <買取商品>" as purchase_target {
  id（買取商品ID）: unsigned bigint <<PK>><<AI>>
  name（買取商品名）: varchar(255)
  jan_code（JANコード）: varchar(255) <<UQ>>
  image_url（画像URL）: varchar(255)
  max_quantity（買取可能数）: unsigned int
  is_active（買取中フラグ）: unsigned tinyint
  --
  created_at（作成日）: timestamp
  updated_at（更新日）: timestamp
}

entity "PurchaseOffer <買取希望>" as purchase_offer {
  id（買取希望ID）: unsigned bigint <<PK>><<AI>>
  user_id（買取希望ユーザーID）: unsigned bigint <<FK>>
  purchase_target_id（買取対象ID）: unsigned bigint
  price（買取希望価格）: unsigned int
  max_quantity（買取希望数）: unsigned int
  remarks（証左URL）: varchar(255)
  status（買取ステータス）: unsigned int #1承認待ち 2承認済み 3発送済み 4買取済み
  --
  created_at（作成日）: timestamp
  updated_at（更新日）: timestamp
}

user ||--o{ purchase_offer
purchase_target ||--o{ purchase_offer
@enduml
